--- a/package.json
+++ b/package.json
@@ -2,15 +2,37 @@
   "name": "typographie.js",
   "version": "0.0.1",
   "description": "Library for preparation of russian texts to web publication",
-  "main": "typographie.js",
+  "main": "lib/typographie.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/asleepwalker/typographie.js.git"
   },
-  "keywords": ["text", "web", "typography", "publication", "articles", "copywrighting", "auto", "preparation", "russian"],
+  "keywords": [
+    "text",
+    "web",
+    "typography",
+    "publication",
+    "articles",
+    "copywrighting",
+    "auto",
+    "preparation",
+    "russian"
+  ],
   "author": "Artyom 'Sleepwalker' Fedosov <mail@asleepwalker.ru>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/asleepwalker/typographie.js/issues"
+  },
+  "scripts": {
+    "build": "webpack",
+    "dev": "webpack --watch"
+  },
+  "devDependencies": {
+    "webpack": "~1.14.0",
+    "babel": "~6.5.2",
+    "babel-core": "~6.22.1",
+    "babel-preset-es2015": "~6.22.0",
+    "babel-loader": "~6.2.10",
+    "babel-plugin-add-module-exports": "~0.2.1"
   }
 }
