--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-core": "~6.22.1",
     "babel-preset-es2015": "~6.22.0",
     "babel-loader": "~6.2.10",
-    "babel-plugin-add-module-exports": "~0.2.1"
+    "babel-plugin-add-module-exports": "~0.2.1",
+    "babel-polyfill": "~6.22.0"
   }
 }
