--- a/package.json
+++ b/package.json
@@ -29,11 +29,10 @@
   },
   "devDependencies": {
     "webpack": "~1.14.0",
-    "babel": "~6.5.2",
     "babel-core": "~6.22.1",
     "babel-preset-es2015": "~6.22.0",
     "babel-loader": "~6.2.10",
     "babel-plugin-add-module-exports": "~0.2.1",
-    "babel-polyfill": "~6.22.0"
+    "core-js": "~2.4.1"
   }
 }
