--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "babel-loader": "~6.2.10",
     "babel-plugin-add-module-exports": "~0.2.1",
     "core-js": "~2.4.1"
+  },
+  "dependencies": {
+    "he": "^1.1.1"
   }
 }
