--- a/package.json
+++ b/package.json
@@ -33,9 +33,7 @@
     "babel-preset-es2015": "~6.22.0",
     "babel-loader": "~6.2.10",
     "babel-plugin-add-module-exports": "~0.2.1",
-    "core-js": "~2.4.1"
-  },
-  "dependencies": {
+    "core-js": "~2.4.1",
     "he": "^1.1.1"
   }
 }
