--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
+# Created by .ignore support plugin (hsz.mobi)
+.idea
+*.iws
+/out/
+.idea_modules/
+atlassian-ide-plugin.xml
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+logs
+*.log
+npm-debug.log*
+pids
+*.pid
+*.seed
+*.pid.lock
+lib-cov
+coverage
+.nyc_output
+.grunt
+.lock-wscript
+build/Release
 node_modules
-npm-debug.log
+jspm_packages
+.npm
+.eslintcache
+.node_repl_history
+*.tgz
+.yarn-integrity
