--- a/package.json
+++ b/package.json
@@ -25,15 +25,21 @@
   },
   "scripts": {
     "build": "webpack",
+    "lint": "eslint src/",
     "dev": "webpack --watch"
   },
   "devDependencies": {
-    "webpack": "~2.2.1",
-    "babel-core": "~6.22.1",
-    "babel-preset-es2015": "~6.22.0",
-    "babel-loader": "~6.2.10",
-    "babel-plugin-add-module-exports": "~0.2.1",
-    "core-js": "~2.4.1",
-    "he": "^1.1.1"
+    "eslint": "3.14.1",
+    "eslint-config-airbnb-base": "11.0.1",
+    "eslint-plugin-import": "2.2.0",
+  },
+  "dependencies": {
+    "babel-core": "6.22.1",
+    "babel-loader": "6.2.10",
+    "babel-plugin-add-module-exports": "0.2.1",
+    "babel-preset-es2015": "6.22.0",
+    "core-js": "2.4.1",
+    "he": "1.1.1",
+    "webpack": "2.2.1"
   }
 }
