Reverted spaces to tabs, added travis ci check

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": "airbnb-base",
   "rules": {
+    "indent": ["error", "tab"],
     "no-underscore-dangle": "warn",
     "no-param-reassign": "warn",
     "no-multi-spaces": "warn",
@@ -8,6 +9,7 @@
     "class-methods-use-this": "warn",
     "prefer-const": "warn",
     "no-return-assign": "warn",
-    "no-useless-escape": "warn"
+    "no-useless-escape": "warn",
+    "no-tabs": "off"
   }
 }
