--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "devDependencies": {
     "eslint": "3.14.1",
     "eslint-config-airbnb-base": "11.0.1",
-    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-import": "2.2.0"
   },
   "dependencies": {
     "babel-core": "6.22.1",
